2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSScrollView view.
	* Source/NSScrollView.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSBrowser view.
	* Source/NSMenuView.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSBrowser view.
	* Source/NSBrowser.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw NSScroller view.
	* Source/NSScroller.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Gregory John Casamento  <greg.casamento@gmail.com>

	* Source/GSThemeDrawing.m: Added method to draw tab view.
	* Source/NSTabView.m: Added call in drawRect: to new drawing method
	in GSTheme.
	* Headers/Additions/GNUstepGUI/GSTheme.h: 
	Added declaration for new method.
	
2010-11-26  Wolfgang Lux  <wolfgang.lux@gmail.com>>

	* Source/NSWindow.m (-performClose:): Do not discard close
	requests for a window in a modal session when the window has
	-worksWhenModal==YES.

2010-11-22  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Source/NSTextView_actions.m (-deleteBackward:): Add missing
	assignment to update the typing attributes.

2010-11-16 Doug Simons <doug.simons@testplant.com>

	* Source/GSThemeDrawing.m:
	Make border of NSColorWell smaller to more closely match Cocoa